# paper_claw

./: README.md  app.py  pyproject.toml
src/literature_claw/: config.py
src/literature_claw/export/: exporter.py
src/literature_claw/llm/: client.py
src/literature_claw/pdf/: reader.py
src/literature_claw/references/: manager.py
src/literature_claw/summary/: summarizer.py
src/literature_claw/writing/: assistant.py
src/literature_claw/writing/templates/: paper_template.md
tests/: test_exporter.py  test_reader.py  test_summarizer.py
